Fixed bug in IE.
A empty page would open when the info links were clicked, rather than displaying additional info. Now the info appears as expected.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           For help classifying accounts, see the first bullet in the list  
           <a href="https://www.bogleheads.org/wiki/Principles_of_tax-efficient_fund_placement#General_strategy">here</a>.
         </p>
-        <a href="javascript:$('#how-it-works').toggle('easeOutQuart')"><h6>How it works ></h6></a>
+        <a href="javascript:$('#how-it-works').toggle('easeOutQuart');void(0);"><h6>How it works ></h6></a>
         <ol id="how-it-works" class="hidden">
           <li>The total value of all accounts is determined, and is partitioned among the asset classes by percentage of the portfolio.</li>
           <li>'Tax inefficient assets' are assigned to tax deferred accounts, then to tax free accounts, and finally taxable accounts.</li>
@@ -49,7 +49,7 @@
           <li>Any remaining asset value is distributed among the remaining accounts with available balances.</li>
           <li>The result of this is displayed below in a table.</li>
         </ol>
-        <a href="javascript:$('#hints').toggle('easeOutQuart')"><h6>Helpful hints ></h6></a>
+        <a href="javascript:$('#hints').toggle('easeOutQuart');void(0);"><h6>Helpful hints ></h6></a>
         <ol id="hints" class="hidden">
           <li>You can use the back and forward buttons as undo and redo.</li>
           <li>To save your work, just bookmark this page in a state you'd like to preserve.</li>
@@ -234,7 +234,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
 
-  <!-- The App's Javascript -->
+  <!-- The app's Javascript -->
   <script async src="static/js/ui.js"></script>
   <script async defer src="static/js/main.js"></script>
 
