--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="./App.tsx"></script>
+  <script src="./index.tsx"></script>
 </body>
 </html>
