Clean up page title and meta

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Portfolio Rebalancing Calculator</title>
-  <meta name="description" content="A tool to help with distributing assets in a new portfolio, and with rebalancing an existing portfolio.">
+  <title>Rebalance Calc v2</title>
+  <meta name="description" content="A Portfolio Rebalancing and Tax Optimization Calculator">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
