--- a/backwardCompat/v1/index.html
+++ b/backwardCompat/v1/index.html
@@ -31,7 +31,7 @@
           This tool is meant to help with re-balancing investment assets, and with building a tax efficient portfolio (in the U.S.). Periodically re-balancing keeps one's asset allocation (and exposure to risk) in a comfortable range, and works best when all investment accounts are treated as part of a single portfolio. 
         </p>
         <p>
-          See the bogleheads wiki for info on <a href="https://www.bogleheads.org/wiki/Principles_of_tax-efficient_fund_placement">tax efficiency</a>, 
+          See the Bogleheads wiki for info on <a href="https://www.bogleheads.org/wiki/Principles_of_tax-efficient_fund_placement">tax efficiency</a>, 
           and for <a href="https://www.bogleheads.org/wiki/Video:Bogleheads%C2%AE_investment_philosophy">general investing suggestions</a>.
         </p>
         <p>
